# screenshots-rs

./: Cargo.toml  README.md
examples/: screenshots.rs
src/: lib.rs
src/linux/: mod.rs  wayland.rs  xorg.rs
