[package]
name = "screenshots"
version = "0.4.3"
edition = "2021"
description = "A cross-platform screen capturer library"
license = "Apache-2.0"
documentation = "https://docs.rs/screenshots"
homepage = "https://github.com/nashaofu/screenshots-rs"
repository = "https://github.com/nashaofu/screenshots-rs.git"
keywords = ["screenshots", "screenshot", "screen", "capture"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3 
overflow-checks = false
debug = 2
[dependencies]
image = "*"
display-info = "*"


[target.'cfg(target_os="linux")'.dependencies]
dbus = "*"
xcb = "*"


[[example]]
name = "Screenshot"
path = "examples/screenshot.rs"